--- a/Portfolio/portfolio/src/app/globals.css
+++ b/Portfolio/portfolio/src/app/globals.css
@@ -6,7 +6,23 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  scroll-behavior: smooth;
 }
+@keyframes fadeSlide {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeSlide {
+  animation: fadeSlide 0.6s ease-in-out;
+}
+
 
 @layer utilities {
   .clip-left {
