--- a/Portfolio/portfolio/src/components/about/Skills/skills.module.css
+++ b/Portfolio/portfolio/src/components/about/Skills/skills.module.css
@@ -81,3 +81,8 @@
     font-size: 1.2rem;
   }
 }
+
+.dark-dialog .MuiDialog-paper {
+  background-color: #1f2937; /* dark background */
+  color: #f3f4f6; /* light text */
+}
